Add: iconRednderer and scratchStyles Fix: Icons

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,46 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   list-style: none;
+}
+:root{
+  --ff-primary: "Inter", sans-serif;
+
+  --fs-primary-100: 56px;
+  --fs-primary-200: 84px;
+
+  --fs-secondary-100: 12px;
+  --fs-secondary-200: 14px;
+  --fs-secondary-300: 16px;
+  --fs-secondary-400: 20px;
+}
+.fs-primary-100{
+  font-size: var(--fs-primary-100);
+}
+.fs-primary-200{
+  font-size: var(--fs-primary-200);
+}
+.fs-secondary-100{
+  font-size: var(--fs-secondary-100);
+}
+.fs-secondary-200{
+  font-size: var(--fs-secondary-200);
+}
+.fs-secondary-300{
+  font-size: var(--fs-secondary-300);
+}
+
+.btn--color{
+  background: linear-gradient(180deg, rgb(243, 135, 68) 0%, rgb(255, 114, 98) 100%)
+}
+body{
+  background: white;
+  width: 100%;
+  height: 100vh;
+  font-family: var(--ff-primary);
 }
