--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,9 @@
   box-sizing: border-box;
   list-style: none;
 }
+html{
+  scroll-behavior: smooth;
+}
 :root{
   --ff-primary: "Inter", sans-serif;
 
@@ -36,11 +39,31 @@
 }
 
 .btn--color{
-  background: linear-gradient(180deg, rgb(243, 135, 68) 0%, rgb(255, 114, 98) 100%)
+  transition: all 300ms ease;
+  background: transparent;
 }
+.btn--color:hover{
+  background: linear-gradient(180deg, rgb(243, 135, 68) 0%, rgb(255, 114, 98) 100%);
+  color: white;
+}
+/* hovers */
+
 body{
   background: white;
   width: 100%;
   height: 100vh;
   font-family: var(--ff-primary);
 }
+
+.ul-container .line{
+  width: 0%;
+  height: 2px; border-radius: 10px;
+  background: black;
+  transition: all 200ms ease-in;
+  opacity: 0;
+}
+.ul-container:hover .line{
+  width: 100%;
+  opacity: 1;
+}
+  
