--- a/src/index.css
+++ b/src/index.css
@@ -113,6 +113,7 @@ body{
   width: 100%;
   height: 100vh;
   font-family: var(--ff-primary);
+ background-color: #f9f9f9;
 }
 
 .ul-container .line{
