--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,9 @@
   box-sizing: border-box;
   list-style: none;
 }
+#H0, #H1, #H2, #H3, #M, #H {
+  will-change: transform, height;
+}
 html{
   scroll-behavior: smooth;
 }
